--- a/UI/status.ui
+++ b/UI/status.ui
@@ -39,124 +39,6 @@
      <height>180</height>
     </rect>
    </property>
-   <property name="palette">
-    <palette>
-     <active>
-      <colorrole role="Light">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>243</red>
-         <green>243</green>
-         <blue>243</blue>
-        </color>
-       </brush>
-      </colorrole>
-      <colorrole role="Base">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>243</red>
-         <green>243</green>
-         <blue>243</blue>
-        </color>
-       </brush>
-      </colorrole>
-      <colorrole role="HighlightedText">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>243</red>
-         <green>243</green>
-         <blue>243</blue>
-        </color>
-       </brush>
-      </colorrole>
-      <colorrole role="NoRole">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>243</red>
-         <green>243</green>
-         <blue>243</blue>
-        </color>
-       </brush>
-      </colorrole>
-     </active>
-     <inactive>
-      <colorrole role="Light">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>255</red>
-         <green>255</green>
-         <blue>255</blue>
-        </color>
-       </brush>
-      </colorrole>
-      <colorrole role="Base">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>255</red>
-         <green>255</green>
-         <blue>255</blue>
-        </color>
-       </brush>
-      </colorrole>
-      <colorrole role="HighlightedText">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>42</red>
-         <green>42</green>
-         <blue>42</blue>
-        </color>
-       </brush>
-      </colorrole>
-      <colorrole role="NoRole">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>0</red>
-         <green>0</green>
-         <blue>0</blue>
-        </color>
-       </brush>
-      </colorrole>
-     </inactive>
-     <disabled>
-      <colorrole role="Light">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>255</red>
-         <green>255</green>
-         <blue>255</blue>
-        </color>
-       </brush>
-      </colorrole>
-      <colorrole role="Base">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>255</red>
-         <green>255</green>
-         <blue>255</blue>
-        </color>
-       </brush>
-      </colorrole>
-      <colorrole role="HighlightedText">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>255</red>
-         <green>255</green>
-         <blue>255</blue>
-        </color>
-       </brush>
-      </colorrole>
-      <colorrole role="NoRole">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>0</red>
-         <green>0</green>
-         <blue>0</blue>
-        </color>
-       </brush>
-      </colorrole>
-     </disabled>
-    </palette>
-   </property>
    <property name="font">
     <font>
      <pointsize>10</pointsize>
@@ -167,6 +49,12 @@
    </property>
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
+   </property>
+   <property name="verticalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
+   </property>
+   <property name="horizontalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
    </property>
    <property name="autoScroll">
     <bool>false</bool>
@@ -216,15 +104,6 @@
       <bold>false</bold>
      </font>
     </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
-    </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
     </property>
@@ -239,15 +118,6 @@
       <weight>50</weight>
       <bold>false</bold>
      </font>
-    </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
     </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
@@ -264,15 +134,6 @@
       <bold>false</bold>
      </font>
     </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
-    </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
     </property>
@@ -287,15 +148,6 @@
       <weight>50</weight>
       <bold>false</bold>
      </font>
-    </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
     </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
@@ -312,15 +164,6 @@
       <bold>false</bold>
      </font>
     </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
-    </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
     </property>
@@ -333,15 +176,6 @@
      <font>
       <pointsize>10</pointsize>
      </font>
-    </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
     </property>
    </item>
   </widget>
@@ -359,14 +193,17 @@
      <pointsize>10</pointsize>
     </font>
    </property>
-   <property name="styleSheet">
-    <string notr="true"/>
-   </property>
    <property name="frameShape">
     <enum>QFrame::NoFrame</enum>
    </property>
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
+   </property>
+   <property name="verticalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
+   </property>
+   <property name="horizontalScrollBarPolicy">
+    <enum>Qt::ScrollBarAlwaysOff</enum>
    </property>
    <property name="autoScroll">
     <bool>false</bool>
@@ -414,16 +251,7 @@
      </font>
     </property>
     <property name="textAlignment">
-     <set>AlignHCenter|AlignVCenter|AlignCenter</set>
-    </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
+     <set>AlignCenter</set>
     </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
@@ -441,16 +269,7 @@
      </font>
     </property>
     <property name="textAlignment">
-     <set>AlignHCenter|AlignVCenter|AlignCenter</set>
-    </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
+     <set>AlignCenter</set>
     </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
@@ -468,16 +287,7 @@
      </font>
     </property>
     <property name="textAlignment">
-     <set>AlignHCenter|AlignVCenter|AlignCenter</set>
-    </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
+     <set>AlignCenter</set>
     </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
@@ -495,16 +305,7 @@
      </font>
     </property>
     <property name="textAlignment">
-     <set>AlignHCenter|AlignVCenter|AlignCenter</set>
-    </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
+     <set>AlignCenter</set>
     </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
@@ -522,16 +323,7 @@
      </font>
     </property>
     <property name="textAlignment">
-     <set>AlignHCenter|AlignVCenter|AlignCenter</set>
-    </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
+     <set>AlignCenter</set>
     </property>
     <property name="flags">
      <set>ItemIsEnabled</set>
@@ -549,16 +341,7 @@
      </font>
     </property>
     <property name="textAlignment">
-     <set>AlignHCenter|AlignVCenter|AlignCenter</set>
-    </property>
-    <property name="background">
-     <brush brushstyle="SolidPattern">
-      <color alpha="255">
-       <red>243</red>
-       <green>243</green>
-       <blue>243</blue>
-      </color>
-     </brush>
+     <set>AlignCenter</set>
     </property>
    </item>
   </widget>
